# Logic_Py

./: Hello_World.py  LICENSE  Logic_circuits.py  README.md  __init__.py  arithmatic_gates.py  basic_gates.py  combinational_gates.py  pyproject.toml  secondary_gates.py  setup.py
Logic_Py/: Hello_World.py  __init__.py  basic_gates.py  combinational_gates.py  plotting.py  secondary_gates.py
