[tool.poetry]
name = "Logic_Py"
version = "0.4.1"
description = "Python Package to realize combinational logic gates"
authors = ["Vishwesh <vishwesh.arush@gmail.com>"]
keywords = ["python", "Logic gates"]
readme = "README.md"
license = "Apache 2.0"
homepage = "https://github.com/Vishwesh-Vishwesh/Logic_Py"
repository = "https://github.com/Vishwesh-Vishwesh/Logic_Py"
include = [
    "LICENSE",
]
[tool.poetry.dependencies]
python = "^3.0"
numpy = "^1.0"

[tool.poetry.dev-dependencies]
pytest = "^5.2"

#[tool.poetry.scripts]
#cli_command_name = "Logic_Py.basic_gates:AND"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
